# 2022s_networks_chatapp

./: .gitignore  README.md  install.sh  run.sh  setup.cfg  test.txt
chatApp/: app.py  client.py  constant.py  log.py  message.py  parse.py  server.py
