[metadata]
name = chatApp
version = 0.1.0
description = A simple chat application using UDP
long_description = file: README.md
long_description_content_type = text/markdown
author = Yunlan Li
author_email = yl4387@columbia.edu
url = https://github.com/yunlanli/2022s_networks_chatapp.git

[options]
packages = find:
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    ChatApp = chatApp.app:main
